# rtracker

./: .gitignore  Cargo.toml  README.md
apps/rtracker-cli/: Cargo.toml
apps/rtracker-cli/examples/: bake_samples.rs  glitch_storm.rs  idm_dark.rs  intelligent_jungle.rs  noto_alphabet.rs  squarepusher.rs  squarepusher_jungle.rs  vordhosbn.rs
apps/rtracker-cli/src/: engine.rs  main.rs  mod_import.rs  playback.rs  slice.rs  tui.rs
crates/rtracker-core/: Cargo.toml
crates/rtracker-core/src/: lib.rs  pattern.rs  presets.rs  song.rs
crates/rtracker-render/: Cargo.toml
crates/rtracker-render/src/: dsp.rs  envelope.rs  fx.rs  lib.rs  mixer.rs  sample.rs  voice.rs  wav.rs
crates/rtracker-render/tests/: render_smoke.rs
examples/: aphex_bell.json  beat_120bpm.json  glitch_storm.json  handmade_smoke.json  idm_dark.json  jungle_amen.json  jungle_song.json  noto_alphabet.json  noto_vibe.json  pattern_basic.json  pattern_sampled.json  vordhosbn.json
examples/intelligent_jungle/: intelligent_jungle.json
examples/squarepusher/: squarepusher.json
examples/squarepusher_jungle/: squarepusher_jungle.json
mods/: build_jungle.py  build_song.py  mod200446.mod  xm_extract.py
