[workspace]
members = [
    "crates/rtracker-core",
    "crates/rtracker-render",
    "apps/rtracker-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hound = "3.5"
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
arc-swap = "1"
ratatui = "0.28"
crossterm = "0.28"

rtracker-core = { path = "crates/rtracker-core" }
rtracker-render = { path = "crates/rtracker-render" }
