[package]
name = "rtracker-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "rtracker"
path = "src/main.rs"

[dependencies]
rtracker-core = { workspace = true }
rtracker-render = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
cpal = { workspace = true }
arc-swap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
