[package]
name = "rtracker-render"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rtracker-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hound = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
